# zeroclaw-workspace

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  gateway-protocol-notes.md  product-data-boundaries.md  productization-roadmap.md  reuse-attribution.md
scripts/: smoke-inner-zeroclaw.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  process_io.rs
src-tauri/src/chat/: attachments.rs  mod.rs  session_manager.rs  ws_proxy.rs
src-tauri/src/commands/: chat.rs  connection.rs  fs.rs  gateway.rs  gateway_client.rs  local_state.rs  mod.rs  runtime.rs  setup.rs  ssh.rs  task_state.rs
src-tauri/src/commands/setup/: actions.rs  types.rs
src-tauri/src/connection/: bootstrap.rs  discover.rs  mod.rs  ssh.rs
src-tauri/src/gateway/: client.rs  diagnostics.rs  health.rs  mod.rs
src-tauri/src/runtime/: binary.rs  installer.rs  supervisor.rs
src-tauri/src/workspace/: local_state.rs  mod.rs  task_observer.rs  task_state.rs
src-tauri/src/workspace/fs/: mod.rs
src/api/: QueryProvider.tsx  bindings.ts  client.ts  personality.ts  query.ts  quickstart.ts  sse-events.ts  tauri.ts  tools.ts  workspace.test.ts  workspace.ts  ws-chat.ts
src/app/: AddConnectionDialog.tsx  App.tsx  ConnectionPicker.tsx  WelcomeScreen.tsx  WorkspaceShell.tsx  connection-context.tsx  workspace-context.tsx
src/app/commands/: commands.test.ts  commands.ts
src/app/workspace-shell/: ApprovalsPage.tsx  AutomationsPage.tsx  ChatWorkspace.tsx  RuntimeDetail.tsx  SettingsPage.tsx  TaskDetail.tsx  TasksPage.tsx  WorkCreatePopover.tsx  WorkDashboard.tsx  WorkSidebar.tsx  WorkspaceSidebar.tsx  path-labels.test.ts  path-labels.ts  settings-routing.test.ts  settings-routing.ts  settings-sections.ts  types.ts  use-task-sessions.ts  use-threads.ts  use-workspace-commands.ts
src/features/_shared/: DataPanel.tsx
src/features/agent-workspace/: AgentWorkspacePanel.tsx
src/features/approvals/: use-approvals.ts
src/features/chat/: AgentSetupWizard.tsx  AttachmentTray.tsx  ChatComposer.tsx  ChatPanel.tsx  MessageList.tsx  ModelOverrideSelect.tsx  RunControls.tsx  SessionControls.tsx  chat-local-state.ts  chat-reducer.test.ts  chat-reducer.ts  chat-types.ts  diff-preview.ts  use-attachments.ts  use-chat-local-state.ts  use-chat-transport.ts  use-chat.ts  use-session-service.ts  use-transcript-cache.ts
src/features/config/: ConfigPanel.tsx  SetupDoctorTab.tsx  config-categories.ts  config-drafts.tsx  config-value-schema.ts  connection-utils.ts  section-utils.ts  setup-targets.ts  summary-utils.ts  types.ts
src/features/cron/: CronPanel.tsx  format.test.ts  format.ts
src/ui/: dialog.tsx  feedback.tsx  panel.tsx  segmented-control.tsx  select.tsx  switch.tsx  tooltip.tsx
(+36 files in other folders)
