[package]
name = "zeroclaw-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Desktop workspace client for ZeroClaw — connect local or remote"
publish = false

[lib]
name = "zeroclaw_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
which = "7.0"
notify = { version = "8.0", default-features = false, features = ["macos_fsevent"] }
ignore = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.14"
